--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ allprojects {
     ext {
         androidSupportVersion = "27.1.1"
         constraintLayout = "1.1.2"
+        glide = "4.7.1"
     }
 }
 
