--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
         androidSupportVersion = "27.1.1"
         constraintLayout = "1.1.2"
         glide = "4.7.1"
+        expandableTextView = "0.1.4"
     }
 }
 
